--- a/main.css
+++ b/main.css
@@ -88,6 +88,7 @@ body {
     padding: 0;
     float: left;
     width: auto;
+    grid-area: header;
 }
 
 #contact-header {
@@ -131,7 +132,8 @@ li {
 
 .portfolio-grid {
     display: grid;
-    grid-auto-columns: 50% 50%;
+    align-items: center;
+    grid-template-columns: 50% 50%;
     width: 100%;
 }
 
@@ -142,7 +144,6 @@ li {
 
 .p-img {
   opacity: 1;
-  display: block;
   width: 100%;
   height: auto;
   transition: .5s ease;
@@ -174,18 +175,20 @@ li {
 }
 
 .wrapper {
+    display: grid;
     width: 100%;
+    grid-template-areas: "header";
 }
 
 #photos {
   /* Prevent vertical gaps */
   line-height: 0;
 
-  -webkit-column-count: 5;
+  -webkit-column-count: 3;
   -webkit-column-gap:   0px;
-  -moz-column-count:    5;
+  -moz-column-count:    3;
   -moz-column-gap:      0px;
-  column-count:         5;
+  column-count:         3;
   column-gap:           0px;
 }
 
@@ -197,17 +200,17 @@ li {
 
 @media (max-width: 1200px) {
   #photos {
-  -moz-column-count:    4;
-  -webkit-column-count: 4;
-  column-count:         4;
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
   }
 }
 
 @media (max-width: 1000px) {
   #photos {
-  -moz-column-count:    3;
-  -webkit-column-count: 3;
-  column-count:         3;
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
   }
 }
 
