--- a/main.css
+++ b/main.css
@@ -1,13 +1,29 @@
+/* josefin-sans-regular - latin */
+@font-face {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/josefin-sans-v14-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Josefin Sans Regular'), local('JosefinSans-Regular'),
+       url('../fonts/josefin-sans-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/josefin-sans-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/josefin-sans-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/josefin-sans-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/josefin-sans-v14-latin-regular.svg#JosefinSans') format('svg'); /* Legacy iOS */
+}
+
+
 body {
     width: 100%;
     margin: 0;
     font-family: Sawasdee;
+    font-family: 'Josefin Sans';
     background: white;
 }
 
 .cb-slideshow li span {
     width: 100%;
-    height: 90.3%;
+    height: 89.7%;
     position: absolute;
     top: 90px;
     left: 0px;
@@ -86,6 +102,7 @@ body {
     background: white;
     color: black;
     padding: 0;
+    padding-top: 16px;
     float: left;
     width: auto;
     grid-area: header;
@@ -116,30 +133,32 @@ li {
 #index-nav ul li a { display:block; margin:0; padding:8px 20px; color:black; text-decoration:none;}
 #index-nav ul li.active a, #index-nav ul li a:hover { color:#d3d3f9;}
 
-#portfolio-nav { margin: 0; padding: 0; height: 37px; float: right; }
+#portfolio-nav { margin: 0; padding: 0; padding-top: 16px; height: 37px; float: right; }
 #portfolio-nav ul { list-style: none; padding: 0; height: 37px; float: right;}
 #portfolio-nav ul li { margin: 0; margin-right: 40px; display: inline-block; list-style-type: none;
                    text-align: right; float: left;}
 #portfolio-nav ul li a { display: block; margin:0; padding:8px 20px; color:black; text-decoration:none;}
 #portfolio-nav ul li.active a, #portfolio-nav ul li a:hover { color:#d3d3f9;}
 
-#contact-nav { margin: 16px; padding: 0; height: 37px; float: right; }
+#contact-nav { margin: 0; padding: 0; padding-top: 16px; height: 37px; float: right; }
 #contact-nav ul { list-style: none; padding: 0; height: 37px; float: right;}
-#contact-nav ul li { margin: 0; margin-right: 21px; display: inline-block; list-style-type: none;
+#contact-nav ul li { margin: 0; margin-right: 40px; display: inline-block; list-style-type: none;
                    text-align: right; float: left;}
-#contact-nav ul li a { display: block; margin:0; padding:8px 28px; color:black; text-decoration:none;}
+#contact-nav ul li a { display: block; margin:0; padding:8px 20px; color:black; text-decoration:none;}
 #contact-nav ul li.active a, #portfolio-nav ul li a:hover { color:#d3d3f9;}
 
 .portfolio-grid {
+    padding-top: 100px;
     display: grid;
-    align-items: center;
+    justify-items: center;
     grid-template-columns: 50% 50%;
+    grid-row-gap: 20%;
     width: 100%;
 }
 
 .container {
   position: relative;
-  width: 50%;
+  width: 70%;
 }
 
 .p-img {
@@ -174,22 +193,16 @@ li {
   font-size: 40px;
 }
 
-.wrapper {
-    display: grid;
-    width: 100%;
-    grid-template-areas: "header";
-}
-
 #photos {
-  /* Prevent vertical gaps */
+  padding-top: 25px;
   line-height: 0;
-
   -webkit-column-count: 3;
   -webkit-column-gap:   0px;
   -moz-column-count:    3;
   -moz-column-gap:      0px;
   column-count:         3;
   column-gap:           0px;
+  width: 100%;
 }
 
 #photos img {
@@ -212,6 +225,11 @@ li {
   -webkit-column-count: 2;
   column-count:         2;
   }
+  .text {
+    color: #333333;
+    font-size: 30px;
+  }
+  
 }
 
 @media (max-width: 800px) {
@@ -220,6 +238,10 @@ li {
   -webkit-column-count: 2;
   column-count:         2;
   }
+  .text {
+    color: #333333;
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 400px) {
@@ -227,5 +249,9 @@ li {
   -moz-column-count:    1;
   -webkit-column-count: 1;
   column-count:         1;
+  }
+  .text {
+    color: #333333;
+    font-size: 10px;
   }
 }
