--- a/main.css
+++ b/main.css
@@ -3,13 +3,26 @@
   font-family: 'Josefin Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/josefin-sans-v14-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin/josefin-sans-v14-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Josefin Sans Regular'), local('JosefinSans-Regular'),
-       url('../fonts/josefin-sans-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/josefin-sans-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/josefin-sans-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/josefin-sans-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/josefin-sans-v14-latin-regular.svg#JosefinSans') format('svg'); /* Legacy iOS */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin/josefin-sans-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin/josefin-sans-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin/josefin-sans-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin/josefin-sans-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin/josefin-sans-v14-latin-regular.svg#JosefinSans') format('svg'); /* Legacy iOS */
+}
+/* josefin-sans-light - latin */
+@font-face {
+  font-family: 'Josefin Sans Light';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin-1/josefin-sans-v14-latin-300.eot'); /* IE9 Compat Modes */
+  src: local('Josefin Sans Light'), local('JosefinSans-Light'),
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin-1/josefin-sans-v14-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin-1/josefin-sans-v14-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin-1/josefin-sans-v14-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin-1/josefin-sans-v14-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/home/ev/Documents/website/fonts/josefin-sans-v14-latin-1/josefin-sans-v14-latin-300.svg#JosefinSans') format('svg'); /* Legacy iOS */
 }
 
 
@@ -17,7 +30,7 @@ body {
     width: 100%;
     margin: 0;
     font-family: Sawasdee;
-    font-family: 'Josefin Sans';
+    font-family: 'Josefin Sans Light';
     background: white;
 }
 
@@ -146,6 +159,17 @@ li {
                    text-align: right; float: left;}
 #contact-nav ul li a { display: block; margin:0; padding:8px 20px; color:black; text-decoration:none;}
 #contact-nav ul li.active a, #portfolio-nav ul li a:hover { color:#d3d3f9;}
+
+#contact-grid {
+  display: grid;
+  width: 100%;
+  padding-top: 25%;
+  justify-items: center;
+}
+
+#c-text {
+  font-size: 20px;
+}
 
 .portfolio-grid {
     padding-top: 100px;
