--- a/main.css
+++ b/main.css
@@ -145,6 +145,7 @@ li {
                    text-align: right; float: left;}
 #index-nav ul li a { display:block; margin:0; padding:8px 20px; color:black; text-decoration:none;}
 #index-nav ul li.active a, #index-nav ul li a:hover { color:#d3d3f9;}
+#index-header h2.active a, a:hover { color:#d3d3f9;}
 
 #portfolio-nav { margin: 0; padding: 0; padding-top: 16px; height: 37px; float: right; }
 #portfolio-nav ul { list-style: none; padding: 0; height: 37px; float: right;}
@@ -158,13 +159,27 @@ li {
 #contact-nav ul li { margin: 0; margin-right: 40px; display: inline-block; list-style-type: none;
                    text-align: right; float: left;}
 #contact-nav ul li a { display: block; margin:0; padding:8px 20px; color:black; text-decoration:none;}
-#contact-nav ul li.active a, #portfolio-nav ul li a:hover { color:#d3d3f9;}
+#contact-nav ul li.active a, #contact-nav ul li a:hover { color:#d3d3f9;}
+
+#about-grid {
+  width: 100%;
+  display: grid;
+  padding-top: 100px;
+  grid-template-columns: 30% auto 30%;
+  justify-items: center;
+}
+
+#about-grid img {
+  width: 200px;
+  height: auto;
+}
 
 #contact-grid {
   display: grid;
   width: 100%;
-  padding-top: 25%;
+  padding-top: 300px;
   justify-items: center;
+
 }
 
 #c-text {
