--- a/main.css
+++ b/main.css
@@ -286,7 +286,7 @@ li {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   #photos {
   -moz-column-count:    1;
   -webkit-column-count: 1;
@@ -295,5 +295,27 @@ li {
   .text {
     color: #333333;
     font-size: 10px;
+  }
+  .cb-slideshow li span {
+    width: 100%;
+    height: 89.7%;
+    position: absolute;
+    top: 200px;
+    left: 0px;
+    color: transparent;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    opacity: 0;
+    z-index: 0;
+    animation: imageAnimation 36s linear infinite 0s;
+  }
+  .portfolio-grid {
+    padding-top: 100px;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 100%;
+    grid-row-gap: 5%;
+    width: 100%;
   }
 }
